--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "lodash": "^4.17.21",
+    "mongoose": "^8.0.3",
+    "mongodb": "^5.7.5"
   }
 }
